--- a/src/global.css
+++ b/src/global.css
@@ -8,12 +8,17 @@
     margin: 0;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     background-color: #14181c;
     color: #9ab;
     font-family: sans-serif;
+    height: 100%;
 }
 
 img,
